# ai-drug-prioritization

./: .gitattributes  .gitignore  README.md  deduplicated_amantadine_labels.csv  manuscript.md  pyproject.toml
algorithm-precision-medicine/: doc.html  doc.md  headings.md
dailymed/: amantadine_hydrochloride.xml  pharmbert.py  scratch.py  show.bash
data/: all_drugbank.csv  drug_list.csv  drug_list.json  ranked.csv  slc_drug_list.csv  slc_drug_list.json  smaller_spl_setids_list.json  spl_setids_list.json  translator_drug_list.json  translator_drugs.json  translator_ranked.csv  translator_spl_setids_list.json
data/admet/: ames-0.87-0.002.dump  bbb_martins-0.916-0.002.dump  bioavailability_ma-0.74-0.01.dump  caco2_wang-0.285-0.01.dump  clearance_hepatocyte_az-0.492-0.014.dump  clearance_microsome_az-0.634-0.006.dump  cyp2c9_veith-0.861-0.001.dump  (+15 more)
drug_gene_budger/: DGB_results_MAPK8IP3.xlsx  explore.py
drugbank/: amantadine.xml  scratch.py  show.bash
fda/: Applications.tsv  MarketingStatus.txt  TE.tsv  drug_list.csv  fda_approval.R  fda_schema.txt
figures/: Makefile  circle_locations.py  figure.tex
literature/: iwasawa.html  mapk8ip3
namc/: namcshc2022_r.R
pubmed/: Makefile  abstract_finder.R  abstracts.xml  data.xml
src/: adverse.hy  all_drugbank.py  compilation.py  compile_translator.py  dailymed_test.hy  data_augmenter.hy  data_augmenter.py  drugbank.py  fda_label.py  json_to_csv.jq  json_to_csv.sh  pk_to_csv.py  rank_data.hy  rank_data.py  rank_list.py  rank_with_safety.hy  rank_with_safety.py  ranked_stats.py  setid_exploration.hy  show_data_all.sh  show_data_e.sh  submission_gnn.py  test_percent.R  tests.py
(+68 files in other folders)
