[project]
name = "drug-manuscript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.5",
    "dgl",
    "hy>=1.1.0",
    "hyrule>=1.0.0",
    "molfeat[dgl]>=0.11.0",
    "numpy<2",
    "pandas==2.0.0",
    "pycairo>=1.28.0 ; sys_platform == 'linux'",
    "pygobject>=3.52.3 ; sys_platform == 'linux'",
    "pytdc>=0.4.1",
    "rdkit>=2024.9.5",
    "scikit-learn>=1.6.1",
    "setuptools>=75.8.0",
    "torch==2.3.0",
    "torchdata==0.9.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
dgl = [
    { url = "https://data.dgl.ai/wheels/dgl-2.0.0-cp310-cp310-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin'" },
    { url = "https://data.dgl.ai/wheels/dgl-2.0.0-cp310-cp310-manylinux1_x86_64.whl", marker = "sys_platform == 'linux'" },
]
